Make sure the links are always visible

--- a/chrome/injected/browserAction.css
+++ b/chrome/injected/browserAction.css
@@ -31,4 +31,5 @@
 
 .citizen-ex__pane a {
   display: block;
+  color: blue !important;
 }
